# downward

./: .clang-format  .gitattributes  .gitignore  .hgignore  .uncrustify.cfg  12.03.2024  BUILD.md  CHANGES.md  CMakeLists.txt  CONTRIBUTORS  README  README.md  README_PYBIND.txt  TABCOMPLETION.md  UNSOLVABILITY.md  axioms.sas  bitbucket-pipelines.yml  build.py  build_configs.py  cond-eff.sas  fast-downward.py  gripper.sas  issue680_build_configs.py  master.cfg  probBLOCKS-4-1.sas  strips.sas  test-configs.sh  test.plan.1
misc/releases/translator/: README.md  pyproject.toml
src/: CMakeLists.txt  build_all  cleanup  cleanup.py  plan  plan-ipc  plan.py
src/bugs/: BUGS
src/bugs/ff-no-preconditions/: Makefile  axioms.h  best_first_search.h  best_first_search_old.cc  deadend.cc  enforced_hill_climbing.h  ff_heuristic.cc  horn.h  iterative_search.h  scheduler.cc
src/bugs/negative-precondition-bug/: testcase-domain.pddl
src/bugs/psr-strips-derived-predicates/: NOTES  domain.pddl  problem.pddl
src/bugs/safety-net/: best_first_search.cc  best_first_search.h  causal_graph.h  ff_heuristic.h  globals.cc  globals.h  heuristic.h  horn.cc  multi_bfs.h  operator.cc  operator.h  planner.cc  state.cc
src/cmake/modules/: FastDownwardMacros.cmake  FindCplex.cmake
src/cmake_modules/: FastDownwardMacros.cmake  FindClp.cmake  FindCplex.cmake  FindOSI.cmake  FindSoPlex.cmake  FindSoplex.cmake
src/driver/: aliases.py  arguments.py  call.py  input_analyzer.py  limits.py  main.py  plan_manager.py  portfolio.py  portfolio_runner.py  run_components.py  tests.py  util.py
src/driver/portfolios/: seq_opt_fdss_1.py  seq_opt_fdss_2.py  seq_opt_merge_and_shrink.py  seq_sat_fdss_1.py  seq_sat_fdss_2.py  seq_sat_fdss_2014.py
src/javascript/: README.md  configure_cmake.sh  usage_example.js
src/javascript/search/: configure_cmake.sh  index.html  usage_example.js
src/javascript/translator/: README.md  setup.py  usage_example.html  usage_example.js
src/preprocess/: CMakeLists.txt  Makefile  axiom.cc  axiom.h  causal_graph.cc  causal_graph.h  domain_transition_graph.cc  domain_transition_graph.h  helper_functions.cc  helper_functions.h  max_dag.cc  max_dag.h  mutex_group.cc  mutex_group.h  operator.cc  operator.h  planner.cc  scc.cc  scc.h  state.cc  successor_generator.cc  successor_generator.h  variable.cc  variable.h
src/search/: AAA_Mechanical_Changes.md  CMakeLists.txt  DownwardFiles.cmake  FastDownwardPlugins.cmake  Makefile  abstract_state_iterator.cc  abstract_state_iterator.h  abstract_task.cc  abstract_task.h  abstraction.cc  abstraction.h  action_id.cpp  action_id.h  additive_heuristic.cc  additive_heuristic.h  aliases.py  axioms.cc  axioms.h  best_first_search.cc  best_first_search.h  blind_search_heuristic.cc  blind_search_heuristic.h  canonical_heuristic.cc  canonical_heuristic.h  canonical_pdbs_heuristic.cc  canonical_pdbs_heuristic.h  causal_graph.cc  causal_graph.h  cea_heuristic.cc  cea_heuristic.h  cg_cache.cc  cg_cache.h  cg_heuristic.cc  cg_heuristic.h  closed_list.h  combining_evaluator.cc  combining_evaluator.h  command_line.cc  command_line.h  component.h  (+295 more)
src/search/algorithms/: dynamic_bitset.h  equivalence_relation.cc  equivalence_relation.h  int_hash_set.h  int_packer.cc  int_packer.h  max_cliques.cc  named_vector.h  ordered_set.h  priority_queue.h  priority_queues.h  sccs.cc  sccs.h  segmented_vector.h  subscriber.h
src/search/bordercases/: logfile_manuela.tex  logfile_silvan.tex
src/search/cartesian_abstractions/: abstract_search.cc  abstract_search.h  abstract_state.cc  abstract_state.h  abstraction.cc  abstraction.h  additive_cartesian_heuristic.cc  additive_cartesian_heuristic.h  cartesian_heuristic_function.cc  cartesian_heuristic_function.h  cartesian_set.h  cegar.cc  cegar.h  cost_saturation.cc  cost_saturation.h  refinement_hierarchy.cc  refinement_hierarchy.h  split_selector.cc  split_selector.h  subtask_generators.cc  subtask_generators.h  transition.h  transition_system.cc  transition_system.h  types.h  utils.cc  utils.h  utils_landmarks.cc  utils_landmarks.h
src/search/cegar/: abstract_search.cc  abstract_search.h  abstract_state.cc  abstract_state.h  abstraction.cc  abstraction.h  additive_cartesian_heuristic.cc  additive_cartesian_heuristic.h  arc.cc  arc.h  cartesian_heuristic.cc  cartesian_heuristic.h  cartesian_heuristic_function.cc  cartesian_heuristic_function.h  cartesian_set.cc  cartesian_set.h  cegar.cc  cegar.h  cegar_heuristic.cc  cegar_heuristic.h  cegar_heuristic_test.cc  cegar_sum_heuristic.cc  cegar_sum_heuristic.h  concrete_state.cc  concrete_state.h  cost_saturation.cc  cost_saturation.h  decompositions.cc  decompositions.h  domain_abstracted_task.cc  domain_abstracted_task.h  domain_abstracted_task_builder.cc  domain_abstracted_task_builder.h  domains.cc  domains.h  flaw_selector.cc  flaw_selector.h  landmark_task.cc  landmark_task.h  modified_costs_task.cc  (+26 more)
src/search/cmake/: FindCplex.cmake  FindGurobi.cmake  common_cxx_flags.cmake  cxx_options.cmake  macros.cmake  options.cmake
src/search/cost_saturation/: abstraction.cc  abstraction.h  abstraction_generator.cc  abstraction_generator.h  cartesian_abstraction_generator.cc  cartesian_abstraction_generator.h  cost_partitioned_heuristic.cc  cost_partitioned_heuristic.h  cost_partitioning_collection_generator.cc  cost_partitioning_collection_generator.h  cost_partitioning_heuristic.cc  cost_partitioning_heuristic.h  cost_partitioning_heuristic_collection_generator.cc  cost_partitioning_heuristic_collection_generator.h  diversifier.cc  diversifier.h  explicit_abstraction.cc  explicit_abstraction.h  greedy_order_utils.cc  greedy_order_utils.h  order_generator.cc  (+24 more)
src/translate/: __main__.py  additive-hmax.py  arguments.py  axiom_rules.py  build_model.py  constraints.py  fact_groups.py  graph.py  greedy_join.py  instantiate.py  invariant_finder.py  invariants.py  main.py  normalize.py  options.py  pddl_to_prolog.py  relaxed_task.py  relaxed_tasks.py  sas_tasks.py  sccs.py  simplify.py  split_rules.py  timers.py  tools.py  translate-relaxed.py  translate.py  variable_order.py
(+2541 files in other folders)
